# yagb_emulator

./: CMakeLists.txt  README.md
src/: emulator.c  emulator.h  main.c
src/bus/: bus.c  bus.h
src/cartridge/: cartridge.c  cartridge.h
src/common/: logging.c  logging.h
src/cpu/: cpu.c  cpu.h  cpu_opcodes.c  cpu_opcodes.h
src/input/: input.c  input.h
src/input_output/: input_output.c  input_output.h
src/ppu/: ppu.c  ppu.h
src/timer/: timer.c  timer.h
test/: run_tests.c  test_opcodes.c  test_ppu.c
